src/LinguagemAlgoritimicaParser.java
// Generated from /home/supitto/IdeaProjects/AL-Compiler/src/LinguagemAlgoritimica.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LinguagemAlgoritimicaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, ALGORITMO=13, FIM_ALGORITMO=14, CONSTANTE=15, 
		DECLARE=16, TIPO=17, DOIS_PONTOS=18, IGUAL_ASSIMILACAO=19, VIRGULA=20, 
		CIRCUNFLEXO=21, PONTO=22, ABRE_COLCHETE=23, FECHA_COLCHETE=24, REGISTRO=25, 
		FIM_REGISTRO=26, PROCEDIMENTO=27, FUNCAO=28, ABRE_PARENTESES=29, FECHA_PARENTESES=30, 
		FIM_PROCEDIMENTO=31, FIM_FUNCAO=32, LEIA=33, ESCREVA=34, SE=35, FIM_SE=36, 
		ENTAO=37, CASO=38, FIM_CASO=39, PARA=40, SEJA=41, FIM_PARA=42, FACA=43, 
		ATE=44, ENQUANTO=45, FIM_ENQUANTO=46, RETORNE=47, SENAO=48, MENOS=49, 
		MAIS=50, VEZES=51, DIVIDIR=52, VAR=53, BOOLEANO=54, LITERAL=55, INTEIRO=56, 
		REAL=57, LOGICO=58, NUM_REAL=59, NUM_INT=60, CADEIA=61, ID=62, COMENTARIO=63, 
		WS=64, COMENTARIO_INCOMPLETO=65, ERROR=66;
	public static final int
		RULE_programa = 0, RULE_decl_local_global = 1, RULE_decl_local = 2, RULE_variavel = 3, 
		RULE_mais_var = 4, RULE_identificador = 5, RULE_ponteiros_opcionais = 6, 
		RULE_outros_ident = 7, RULE_dimensao = 8, RULE_tipo = 9, RULE_mais_ident = 10, 
		RULE_tipo_basico = 11, RULE_tipo_basico_ident = 12, RULE_tipo_estendido = 13, 
		RULE_valor_constante = 14, RULE_registro = 15, RULE_decl_global = 16, 
		RULE_parametros_opcional = 17, RULE_parametro = 18, RULE_var_opcional = 19, 
		RULE_mais_parametros = 20, RULE_declaracoes_locais = 21, RULE_corpo = 22, 
		RULE_comandos = 23, RULE_cmd = 24, RULE_leia = 25, RULE_escreva = 26, 
		RULE_se = 27, RULE_caso = 28, RULE_para = 29, RULE_enquanto = 30, RULE_faca = 31, 
		RULE_chamada = 32, RULE_atribuicao = 33, RULE_retorne = 34, RULE_mais_expressao = 35, 
		RULE_senao_opcional = 36, RULE_argumentos_opcional = 37, RULE_selecao = 38, 
		RULE_constantes = 39, RULE_mais_constante = 40, RULE_numero_intervalo = 41, 
		RULE_intervalo_opcional = 42, RULE_op_unario = 43, RULE_exp_aritimetica = 44, 
		RULE_op_multiplicacao = 45, RULE_op_adicao = 46, RULE_termo = 47, RULE_outros_termos = 48, 
		RULE_fator = 49, RULE_outros_fatores = 50, RULE_parcela = 51, RULE_parcela_unario = 52, 
		RULE_parcela_nao_unario = 53, RULE_outras_parcelas = 54, RULE_chamada_partes = 55, 
		RULE_exp_relacional = 56, RULE_op_opcional = 57, RULE_op_relacional = 58, 
		RULE_expressao = 59, RULE_op_nao = 60, RULE_termo_logico = 61, RULE_outros_termos_logicos = 62, 
		RULE_fator_logico = 63, RULE_outros_fatores_logicos = 64, RULE_parcela_logica = 65;
	public static final String[] ruleNames = {
		"programa", "decl_local_global", "decl_local", "variavel", "mais_var", 
		"identificador", "ponteiros_opcionais", "outros_ident", "dimensao", "tipo", 
		"mais_ident", "tipo_basico", "tipo_basico_ident", "tipo_estendido", "valor_constante", 
		"registro", "decl_global", "parametros_opcional", "parametro", "var_opcional", 
		"mais_parametros", "declaracoes_locais", "corpo", "comandos", "cmd", "leia", 
		"escreva", "se", "caso", "para", "enquanto", "faca", "chamada", "atribuicao", 
		"retorne", "mais_expressao", "senao_opcional", "argumentos_opcional", 
		"selecao", "constantes", "mais_constante", "numero_intervalo", "intervalo_opcional", 
		"op_unario", "exp_aritimetica", "op_multiplicacao", "op_adicao", "termo", 
		"outros_termos", "fator", "outros_fatores", "parcela", "parcela_unario", 
		"parcela_nao_unario", "outras_parcelas", "chamada_partes", "exp_relacional", 
		"op_opcional", "op_relacional", "expressao", "op_nao", "termo_logico", 
		"outros_termos_logicos", "fator_logico", "outros_fatores_logicos", "parcela_logica"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'<-'", "'..'", "'&'", "'%'", "'<>'", "'>='", "'<='", "'>'", "'<'", 
		"'nao'", "'ou'", "'e'", "'algoritmo'", "'fim_algoritmo'", "'constante'", 
		"'declare'", "'tipo'", "':'", "'='", "','", "'^'", "'.'", "'['", "']'", 
		"'registro'", "'fim_registro'", "'procedimento'", "'funcao'", "'('", "')'", 
		"'fim_procedimento'", "'fim_funcao'", "'leia'", "'escreva'", "'se'", "'fim_se'", 
		"'entao'", "'caso'", "'fim_caso'", "'para'", "'seja'", "'fim_para'", "'faca'", 
		"'ate'", "'enquanto'", "'fim_enquanto'", "'retorne'", "'senao'", "'-'", 
		"'+'", "'*'", "'/'", "'var'", null, "'literal'", "'inteiro'", "'real'", 
		"'logico'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "ALGORITMO", "FIM_ALGORITMO", "CONSTANTE", "DECLARE", "TIPO", "DOIS_PONTOS", 
		"IGUAL_ASSIMILACAO", "VIRGULA", "CIRCUNFLEXO", "PONTO", "ABRE_COLCHETE", 
		"FECHA_COLCHETE", "REGISTRO", "FIM_REGISTRO", "PROCEDIMENTO", "FUNCAO", 
		"ABRE_PARENTESES", "FECHA_PARENTESES", "FIM_PROCEDIMENTO", "FIM_FUNCAO", 
		"LEIA", "ESCREVA", "SE", "FIM_SE", "ENTAO", "CASO", "FIM_CASO", "PARA", 
		"SEJA", "FIM_PARA", "FACA", "ATE", "ENQUANTO", "FIM_ENQUANTO", "RETORNE", 
		"SENAO", "MENOS", "MAIS", "VEZES", "DIVIDIR", "VAR", "BOOLEANO", "LITERAL", 
		"INTEIRO", "REAL", "LOGICO", "NUM_REAL", "NUM_INT", "CADEIA", "ID", "COMENTARIO", 
		"WS", "COMENTARIO_INCOMPLETO", "ERROR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LinguagemAlgoritimica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinguagemAlgoritimicaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode ALGORITMO() { return getToken(LinguagemAlgoritimicaParser.ALGORITMO, 0); }
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public TerminalNode FIM_ALGORITMO() { return getToken(LinguagemAlgoritimicaParser.FIM_ALGORITMO, 0); }
		public List<Decl_local_globalContext> decl_local_global() {
			return getRuleContexts(Decl_local_globalContext.class);
		}
		public Decl_local_globalContext decl_local_global(int i) {
			return getRuleContext(Decl_local_globalContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemAlgoritimicaVisitor ) return ((LinguagemAlgoritimicaVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONSTANTE) | (1L << DECLARE) | (1L << TIPO) | (1L << PROCEDIMENTO) | (1L << FUNCAO))) != 0)) {
				{
				{
				setState(132);
				decl_local_global();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(ALGORITMO);
			setState(139);
			corpo();
			setState(140);
			match(FIM_ALGORITMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_local_globalContext extends ParserRuleContext {
		public Decl_localContext decl_local() {
			return getRuleContext(Decl_localContext.class,0);
		}
		public Decl_globalContext decl_global() {
			return getRuleContext(Decl_globalContext.class,0);
		}
		public Decl_local_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_local_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).enterDecl_local_global(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).exitDecl_local_global(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemAlgoritimicaVisitor ) return ((LinguagemAlgoritimicaVisitor<? extends T>)visitor).visitDecl_local_global(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_local_globalContext decl_local_global() throws RecognitionException {
		Decl_local_globalContext _localctx = new Decl_local_globalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl_local_global);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTANTE:
			case DECLARE:
			case TIPO:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				decl_local();
				}
				break;
			case PROCEDIMENTO:
			case FUNCAO:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				decl_global();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_localContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(LinguagemAlgoritimicaParser.DECLARE, 0); }
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public TerminalNode CONSTANTE() { return getToken(LinguagemAlgoritimicaParser.CONSTANTE, 0); }
		public TerminalNode ID() { return getToken(LinguagemAlgoritimicaParser.ID, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(LinguagemAlgoritimicaParser.DOIS_PONTOS, 0); }
		public Tipo_basicoContext tipo_basico() {
			return getRuleContext(Tipo_basicoContext.class,0);
		}
		public TerminalNode IGUAL_ASSIMILACAO() { return getToken(LinguagemAlgoritimicaParser.IGUAL_ASSIMILACAO, 0); }
		public Valor_constanteContext valor_constante() {
			return getRuleContext(Valor_constanteContext.class,0);
		}
		public TerminalNode TIPO() { return getToken(LinguagemAlgoritimicaParser.TIPO, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Decl_localContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_local; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).enterDecl_local(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).exitDecl_local(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemAlgoritimicaVisitor ) return ((LinguagemAlgoritimicaVisitor<? extends T>)visitor).visitDecl_local(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_localContext decl_local() throws RecognitionException {
		Decl_localContext _localctx = new Decl_localContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl_local);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECLARE:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				match(DECLARE);
				setState(147);
				variavel();
				}
				break;
			case CONSTANTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				match(CONSTANTE);
				setState(149);
				match(ID);
				setState(150);
				match(DOIS_PONTOS);
				setState(151);
				tipo_basico();
				setState(152);
				match(IGUAL_ASSIMILACAO);
				setState(153);
				valor_constante();
				}
				break;
			case TIPO:
				enterOuterAlt(_localctx, 3);
				{
				setState(155);
				match(TIPO);
				setState(156);
				match(ID);
				setState(157);
				match(DOIS_PONTOS);
				setState(158);
				tipo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariavelContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LinguagemAlgoritimicaParser.ID, 0); }
		public DimensaoContext dimensao() {
			return getRuleContext(DimensaoContext.class,0);
		}
		public TerminalNode DOIS_PONTOS() { return getToken(LinguagemAlgoritimicaParser.DOIS_PONTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<Mais_varContext> mais_var() {
			return getRuleContexts(Mais_varContext.class);
		}
		public Mais_varContext mais_var(int i) {
			return getRuleContext(Mais_varContext.class,i);
		}
		public VariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).enterVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).exitVariavel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemAlgoritimicaVisitor ) return ((LinguagemAlgoritimicaVisitor<? extends T>)visitor).visitVariavel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariavelContext variavel() throws RecognitionException {
		VariavelContext _localctx = new VariavelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(ID);
			setState(162);
			dimensao();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(163);
				mais_var();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			match(DOIS_PONTOS);
			setState(170);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mais_varContext extends ParserRuleContext {
		public TerminalNode VIRGULA() { return getToken(LinguagemAlgoritimicaParser.VIRGULA, 0); }
		public TerminalNode ID() { return getToken(LinguagemAlgoritimicaParser.ID, 0); }
		public DimensaoContext dimensao() {
			return getRuleContext(DimensaoContext.class,0);
		}
		public Mais_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).enterMais_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).exitMais_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemAlgoritimicaVisitor ) return ((LinguagemAlgoritimicaVisitor<? extends T>)visitor).visitMais_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_varContext mais_var() throws RecognitionException {
		Mais_varContext _localctx = new Mais_varContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mais_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(VIRGULA);
			setState(173);
			match(ID);
			setState(174);
			dimensao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentificadorContext extends ParserRuleContext {
		public Ponteiros_opcionaisContext ponteiros_opcionais() {
			return getRuleContext(Ponteiros_opcionaisContext.class,0);
		}
		public TerminalNode ID() { return getToken(LinguagemAlgoritimicaParser.ID, 0); }
		public DimensaoContext dimensao() {
			return getRuleContext(DimensaoContext.class,0);
		}
		public Outros_identContext outros_ident() {
			return getRuleContext(Outros_identContext.class,0);
		}
		public IdentificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).enterIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).exitIdentificador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemAlgoritimicaVisitor ) return ((LinguagemAlgoritimicaVisitor<? extends T>)visitor).visitIdentificador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentificadorContext identificador() throws RecognitionException {
		IdentificadorContext _localctx = new IdentificadorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_identificador);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			ponteiros_opcionais();
			setState(177);
			match(ID);
			setState(178);
			dimensao();
			setState(179);
			outros_ident();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ponteiros_opcionaisContext extends ParserRuleContext {
		public TerminalNode CIRCUNFLEXO() { return getToken(LinguagemAlgoritimicaParser.CIRCUNFLEXO, 0); }
		public Ponteiros_opcionaisContext ponteiros_opcionais() {
			return getRuleContext(Ponteiros_opcionaisContext.class,0);
		}
		public Ponteiros_opcionaisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ponteiros_opcionais; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).enterPonteiros_opcionais(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).exitPonteiros_opcionais(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemAlgoritimicaVisitor ) return ((LinguagemAlgoritimicaVisitor<? extends T>)visitor).visitPonteiros_opcionais(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ponteiros_opcionaisContext ponteiros_opcionais() throws RecognitionException {
		Ponteiros_opcionaisContext _localctx = new Ponteiros_opcionaisContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ponteiros_opcionais);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CIRCUNFLEXO) {
				{
				setState(181);
				match(CIRCUNFLEXO);
				setState(182);
				ponteiros_opcionais();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Outros_identContext extends ParserRuleContext {
		public TerminalNode PONTO() { return getToken(LinguagemAlgoritimicaParser.PONTO, 0); }
		public TerminalNode ID() { return getToken(LinguagemAlgoritimicaParser.ID, 0); }
		public DimensaoContext dimensao() {
			return getRuleContext(DimensaoContext.class,0);
		}
		public Outros_identContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outros_ident; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).enterOutros_ident(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemAlgoritimicaListener ) ((LinguagemAlgoritimicaListener)listener).exitOutros_ident(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemAlgoritimicaVisitor ) return ((LinguagemAlgoritimicaVisitor<? extends T>)visitor).visitOutros_ident(this);
			else return visitor.visitChildren(this);
		}
	}
